# Device-Terminal

./: CMakeLists.txt  main.cpp
Qt/: CustomLabel.cpp  CustomLabel.hpp  CustomTextEdit.cpp  CustomTextEdit.hpp  MainWindow.cpp  MainWindow.hpp  WindowManager.cpp  WindowManager.hpp
Terminal/: Terminal.cpp  Terminal.hpp
Terminal/Commands/: Command.cpp  Command.hpp  CommandClear.cpp  CommandLS.cpp  CommandLS.hpp  CommandLoop.cpp  CommandLoop.hpp
Utils/: FileUtils.cpp  FileUtils.hpp  Util.cpp  Util.hpp  Vector2i.cpp  Vector2i.hpp
